# src/controllers/commentController.js
@@ -4,13 +4,17 @@ import { commentService } from '../services/commentServices';
 
 export class commentControll {
   async createComment(req, res) {
-    const data = new Comment({
-      articleId: req.params.articleid,
-      name: req.body.name,
-      comment: req.body.comment,
-    });
-    const comm = await commentService.createComment(data);
-    res.send(comm);
+    try {
+      const data = new Comment({
+        articleId: req.params.articleid,
+        name: req.body.name,
+        comment: req.body.comment,
+      });
+      const comm = await commentService.createComment(data);
+      res.send(comm);
+    } catch (error) {
+      res.status(404).send({ error: 'failed to create' });
+    }
   }
 
   async getComment(req, res) {
